1.5/src/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-deployment
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: multitool
  ports:
  - name: http
    port: 80
    targetPort: 80
